--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@ plugins {
 	id 'idea'
 	id 'java-library'
 	id 'jacoco'
-	id 'org.springframework.boot' version '2.6.1'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'org.springframework.boot' version '3.2.0'
+	id 'io.spring.dependency-management' version '1.1.6'
 	id 'java'
 	id 'com.avast.gradle.docker-compose' version '0.14.13'
 	id 'maven-publish'
@@ -11,8 +11,8 @@ plugins {
 
 group = 'dyp.security'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 11
-targetCompatibility = 11
+sourceCompatibility = 17
+targetCompatibility = 17
 
 apply from: "${rootProject.projectDir}/libraries.gradle"
 
@@ -31,15 +31,25 @@ dependencies {
 	implementation 'com.google.code.gson:gson:2.3.1:sources'
 	testImplementation (
 			testLibraries.springBootTest,
-			testLibraries.springSecurityTest
+			testLibraries.springSecurityTest,
+			testLibraries.restAssured
 	)
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 }
 
+dockerCompose {
+	useComposeFiles.add('it/docker-compose.yml')
+	isRequiredBy(tasks.test)
+}
+
+
 test {
 	useJUnitPlatform()
+	testLogging {
+		events "passed", "skipped", "failed"
+	}
 }
 
 configurations {
