--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@ plugins {
 	id 'idea'
 	id 'java-library'
 	id 'jacoco'
-	id 'org.springframework.boot' version '2.6.1'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'org.springframework.boot' version '3.2.0'
+	id 'io.spring.dependency-management' version '1.1.6'
 	id 'java'
 	id 'com.avast.gradle.docker-compose' version '0.14.13'
 	id 'maven-publish'
@@ -11,8 +11,8 @@ plugins {
 
 group = 'dyp.security'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 11
-targetCompatibility = 11
+sourceCompatibility = 17
+targetCompatibility = 17
 
 apply from: "${rootProject.projectDir}/libraries.gradle"
 
